API/Litecad.h


BOOL   LCAPI lcWndOnClose        (HANDLE hLcWnd);

BOOL   LCAPI lcWndGetPoint       (HANDLE hLcWnd, LPCWSTR szPrompt, int SnapMode, int Index, double* pX, double* pY);

BOOL   LCAPI lcWndGetPointBuf    (HANDLE hLcWnd, int Index, double* pX, double* pY);


// Coordinate convertions
BOOL   LCAPI lcCoordDrwToWnd     (HANDLE hLcWnd, double Xdrw, double Ydrw, int* pXwin, int* pYwin);

BOOL   LCAPI lcCoordWndToDrw     (HANDLE hLcWnd, int Xwin, int Ywin, double* pXdrw, double* pYdrw);


// Color from string
BOOL   LCAPI lcColorIsRGB      (LPCWSTR szColor);

int    LCAPI lcColorGetRed     (LPCWSTR szColor);
 
int    LCAPI lcColorGetGreen   (LPCWSTR szColor);

int    LCAPI lcColorGetBlue    (LPCWSTR szColor);

int    LCAPI lcColorGetIndex   (LPCWSTR szColor);

BOOL   LCAPI lcColorToVal      (LPCWSTR szColor, int* pbRGB, int* pIndex, int* pR,int* pG,int* pB);

// Color palette
BOOL   LCAPI lcColorSetPalette (int Index, int R,int G,int B);

BOOL   LCAPI lcColorGetPalette (int Index, int* pR,int* pG,int* pB);


// Command Window
HANDLE LCAPI lcCreateCmdwin    (HWND hWndParent, int Left, int Top, int Width, int Height);

BOOL   LCAPI lcCmdwinResize    (HANDLE hCmdLine, int Left, int Top, int Width, int Height);


// Properties Window
HANDLE LCAPI lcCreatePropwin   (HWND hWndParent, int Left, int Top, int Width, int Height);

BOOL   LCAPI lcPropwinResize   (HANDLE hPropWnd, int Left, int Top, int Width, int Height);

BOOL   LCAPI lcPropwinUpdate   (HANDLE hPropWnd, BOOL bSelChanged);


// Misc
int     LCAPI lcGetErrorCode    ();

LPCWSTR LCAPI lcGetErrorStr     ();

int     LCAPI lcExtractPreview  (LPCWSTR szFileName, HGLOBAL hGlob, int MaxSize);

BOOL    LCAPI lcExtractFileInfo (LPCWSTR szFileName, WCHAR* szGuid, WCHAR* szComment, int* pInt0, int* pInt1);

BOOL    LCAPI lcGetClientSize   (HWND hWnd, int* pWidth, int* pHeight);

LPCWSTR LCAPI lcGetFileName     (HWND hWnd, int Mode);

LPCWSTR LCAPI lcGetValue        (HWND hWnd, int Lef, int Top, LPCWSTR szCaption, LPCWSTR szPrompt, LPCWSTR szValue);

void    LCAPI lcTextOut         (HDC hDC, int x, int y, LPCWSTR szText, int ColorRGB);

BOOL    LCAPI lcFilletSetLines  (double L1x0, double L1y0, double L1x1, double L1y1, double L2x0, double L2y0, double L2x1, double L2y1);

BOOL    LCAPI lcFillet          (double Rad, double Bis, double Tang);

BOOL    LCAPI lcFilletGetPoint  (int iPnt, double* pX, double* pY);


// Interface for Custom Commands
HANDLE LCAPI lcCreateCommand   (HANDLE hLcWnd, int Id, LPCWSTR szName, BOOL bNeedSel);

BOOL   LCAPI lcCmdExit         ();

BOOL   LCAPI lcCmdPrompt       (HANDLE hCmd, LPCWSTR szText);

HANDLE LCAPI lcCmdGetEntByPoint (HANDLE hCmd, int Xwnd, int Ywnd);

BOOL   LCAPI lcCmdSelectEnt    (HANDLE hCmd, HANDLE hEntity, BOOL bSelect);

BOOL   LCAPI lcCmdRedraw       (HANDLE hCmd);

BOOL   LCAPI lcCmdSetFocus     (HANDLE hCmd);

BOOL   LCAPI lcCmdRegen        (HANDLE hCmd, HANDLE hEnt);

BOOL   LCAPI lcCmdClearPoints  (HANDLE hCmd);

BOOL   LCAPI lcCmdAddPoint     (HANDLE hCmd, int Id, double X, double Y);

BOOL   LCAPI lcCmdGetPoint     (HANDLE hCmd, int Id, double* pX, double* pY);

BOOL   LCAPI lcCmdSetBasePoint (HANDLE hCmd, BOOL bEnable, double X, double Y);

BOOL   LCAPI lcCmdDrawLine     (HANDLE hCmd, double X0, double Y0, double X1, double Y1);

BOOL   LCAPI lcCmdDrawPickbox  (HANDLE hCmd, int Xwnd, int Ywnd);

BOOL   LCAPI lcCmdEqualPoints  (HANDLE hCmd, double X0, double Y0, double X1, double Y1, int Delta);


// 3D surface
void   LCAPI lcSurfInitialize     (int MaxSectPnt, double AngStep);

void   LCAPI lcSurfUnInitialize   ();

void   LCAPI lcSurfClearTriangles ();

BOOL   LCAPI lcSurfAddTriangle    (double X0, double Y0, double Z0, double X1, double Y1, double Z1, double X2, double Y2, double Z2);

BOOL   LCAPI lcSurfGetZ           (double X, double Y, double* pZ);

BOOL   LCAPI lcSurfGetZ_dbg       (double X, double Y, double* pZ, double* pX0, double* pY0, double* pZ0, double* pX1, double* pY1, double* pZ1, double* pX2, double* pY2, double* pZ2);

void   LCAPI lcSurfClearPlan      ();

BOOL   LCAPI lcSurfAddPlanVer     (double X, double Y, double Bulge);

int    LCAPI lcSurfMakeSection    ();

BOOL   LCAPI lcSurfGetSectPoint   (int iPnt, double* pX, double* pY, double* pZ);


// cross-section
void   LCAPI lcCrossSetTolerance (double Zero1, double One1, double Zero2, double One2, double NearPt, double Clas, double CutGr, double RigPt);

BOOL   LCAPI lcCrossClear        ();

BOOL   LCAPI lcCrossBegin        (int PlineType);

BOOL   LCAPI lcCrossAddPoint     (double X, double Y);

BOOL   LCAPI lcCrossEnd          ();

int    LCAPI lcCrossCalcArea     ();

int    LCAPI lcCrossCalcArea2    (HANDLE hDrw, int GroundKey, int RoadKey, int LinkKey);

BOOL   LCAPI lcCrossGetArea      (int iArea, double* pAreaVal, int* pNumPnts);