Samples/VCS/Test1/Litecad.cs


  [DllImport("litecad.dll", EntryPoint="lcWndOnClose", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool WndOnClose(int hLcWnd);

  [DllImport("litecad.dll", EntryPoint="lcWndGetPoint", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool WndGetPoint(int hLcWnd, string szPrompt, int SnapMode, int Index, out double pX, out double pY);

  [DllImport("litecad.dll", EntryPoint="lcWndGetPointBuf", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool WndGetPointBuf(int hLcWnd, int Index, out double pX, out double pY);

  [DllImport("litecad.dll", EntryPoint="lcCoordDrwToWnd", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool CoordDrwToWnd(int hLcWnd, double Xdrw, double Ydrw, out int pXwin, out int pYwin);

  [DllImport("litecad.dll", EntryPoint="lcCoordWndToDrw", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool CoordWndToDrw(int hLcWnd, int Xwin, int Ywin, out double pXdrw, out double pYdrw);

  [DllImport("litecad.dll", EntryPoint="lcColorIsRGB", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool ColorIsRGB(string szColor);

  [DllImport("litecad.dll", EntryPoint="lcColorGetRed", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int ColorGetRed(string szColor);

  [DllImport("litecad.dll", EntryPoint="lcColorGetGreen", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int ColorGetGreen(string szColor);

  [DllImport("litecad.dll", EntryPoint="lcColorGetBlue", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int ColorGetBlue(string szColor);

  [DllImport("litecad.dll", EntryPoint="lcColorGetIndex", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int ColorGetIndex(string szColor);

  [DllImport("litecad.dll", EntryPoint="lcColorToVal", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool ColorToVal(string szColor, out int pbRGB, out int pIndex, out int pR, out int pG, out int pB);

  [DllImport("litecad.dll", EntryPoint="lcColorSetPalette", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool ColorSetPalette(int Index, int R, int G, int B);

  [DllImport("litecad.dll", EntryPoint="lcColorGetPalette", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool ColorGetPalette(int Index, out int pR, out int pG, out int pB);

  [DllImport("litecad.dll", EntryPoint="lcCreateCmdwin", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int CreateCmdwin(IntPtr hWndParent, int Left, int Top, int Width, int Height);

  [DllImport("litecad.dll", EntryPoint="lcCmdwinResize", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool CmdwinResize(int hCmdLine, int Left, int Top, int Width, int Height);

  [DllImport("litecad.dll", EntryPoint="lcCreatePropwin", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int CreatePropwin(IntPtr hWndParent, int Left, int Top, int Width, int Height);

  [DllImport("litecad.dll", EntryPoint="lcPropwinResize", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool PropwinResize(int hPropWnd, int Left, int Top, int Width, int Height);

  [DllImport("litecad.dll", EntryPoint="lcPropwinUpdate", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool PropwinUpdate(int hPropWnd, bool bSelChanged);

  [DllImport("litecad.dll", EntryPoint="lcGetErrorCode", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int GetErrorCode();

  [DllImport("litecad.dll", EntryPoint="lcGetErrorStr", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern string GetErrorStr();

  [DllImport("litecad.dll", EntryPoint="lcExtractPreview", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int ExtractPreview(string szFileName, int hGlob, int MaxSize);

  [DllImport("litecad.dll", EntryPoint="lcExtractFileInfo", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool ExtractFileInfo(string szFileName, out IntPtr szGuid, out IntPtr szComment, out int pInt0, out int pInt1);

  [DllImport("litecad.dll", EntryPoint="lcGetClientSize", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool GetClientSize(IntPtr hWnd, out int pWidth, out int pHeight);

  [DllImport("litecad.dll", EntryPoint="lcGetFileName", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern string GetFileName(IntPtr hWnd, int Mode);

  [DllImport("litecad.dll", EntryPoint="lcGetValue", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern string GetValue(IntPtr hWnd, int Lef, int Top, string szCaption, string szPrompt, string szValue);

  [DllImport("litecad.dll", EntryPoint="lcTextOut", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void TextOut(IntPtr hDC, int x, int y, string szText, int ColorRGB);

  [DllImport("litecad.dll", EntryPoint="lcFilletSetLines", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool FilletSetLines(double L1x0, double L1y0, double L1x1, double L1y1, double L2x0, double L2y0, double L2x1, double L2y1);

  [DllImport("litecad.dll", EntryPoint="lcFillet", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool Fillet(double Rad, double Bis, double Tang);

  [DllImport("litecad.dll", EntryPoint="lcFilletGetPoint", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool FilletGetPoint(int iPnt, out double pX, out double pY);

  [DllImport("litecad.dll", EntryPoint="lcCreateCommand", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int CreateCommand(int hLcWnd, int Id, string szName, bool bNeedSel);

  [DllImport("litecad.dll", EntryPoint="lcCmdExit", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool CmdExit();

  [DllImport("litecad.dll", EntryPoint="lcCmdPrompt", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool CmdPrompt(int hCmd, string szText);

  [DllImport("litecad.dll", EntryPoint="lcCmdGetEntByPoint", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int CmdGetEntByPoint(int hCmd, int Xwnd, int Ywnd);

  [DllImport("litecad.dll", EntryPoint="lcCmdSelectEnt", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool CmdSelectEnt(int hCmd, int hEntity, bool bSelect);

  [DllImport("litecad.dll", EntryPoint="lcCmdRedraw", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool CmdRedraw(int hCmd);

  [DllImport("litecad.dll", EntryPoint="lcCmdSetFocus", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool CmdSetFocus(int hCmd);

  [DllImport("litecad.dll", EntryPoint="lcCmdRegen", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool CmdRegen(int hCmd, int hEnt);

  [DllImport("litecad.dll", EntryPoint="lcCmdClearPoints", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool CmdClearPoints(int hCmd);

  [DllImport("litecad.dll", EntryPoint="lcCmdAddPoint", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool CmdAddPoint(int hCmd, int Id, double X, double Y);

  [DllImport("litecad.dll", EntryPoint="lcCmdGetPoint", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool CmdGetPoint(int hCmd, int Id, out double pX, out double pY);

  [DllImport("litecad.dll", EntryPoint="lcCmdSetBasePoint", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool CmdSetBasePoint(int hCmd, bool bEnable, double X, double Y);

  [DllImport("litecad.dll", EntryPoint="lcCmdDrawLine", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool CmdDrawLine(int hCmd, double X0, double Y0, double X1, double Y1);

  [DllImport("litecad.dll", EntryPoint="lcCmdDrawPickbox", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool CmdDrawPickbox(int hCmd, int Xwnd, int Ywnd);

  [DllImport("litecad.dll", EntryPoint="lcCmdEqualPoints", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool CmdEqualPoints(int hCmd, double X0, double Y0, double X1, double Y1, int Delta);

  [DllImport("litecad.dll", EntryPoint="lcSurfInitialize", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void SurfInitialize(int MaxSectPnt, double AngStep);

  [DllImport("litecad.dll", EntryPoint="lcSurfUnInitialize", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void SurfUnInitialize();

  [DllImport("litecad.dll", EntryPoint="lcSurfClearTriangles", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void SurfClearTriangles();

  [DllImport("litecad.dll", EntryPoint="lcSurfAddTriangle", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool SurfAddTriangle(double X0, double Y0, double Z0, double X1, double Y1, double Z1, double X2, double Y2, double Z2);

  [DllImport("litecad.dll", EntryPoint="lcSurfGetZ", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool SurfGetZ(double X, double Y, out double pZ);

  [DllImport("litecad.dll", EntryPoint="lcSurfGetZ_dbg", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool SurfGetZ_dbg(double X, double Y, out double pZ, out double pX0, out double pY0, out double pZ0, out double pX1, out double pY1, out double pZ1, out double pX2, out double pY2, out double pZ2);

  [DllImport("litecad.dll", EntryPoint="lcSurfClearPlan", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void SurfClearPlan();

  [DllImport("litecad.dll", EntryPoint="lcSurfAddPlanVer", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool SurfAddPlanVer(double X, double Y, double Bulge);

  [DllImport("litecad.dll", EntryPoint="lcSurfMakeSection", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int SurfMakeSection();

  [DllImport("litecad.dll", EntryPoint="lcSurfGetSectPoint", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool SurfGetSectPoint(int iPnt, out double pX, out double pY, out double pZ);

  [DllImport("litecad.dll", EntryPoint="lcCrossSetTolerance", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern void CrossSetTolerance(double Zero1, double One1, double Zero2, double One2, double NearPt, double Clas, double CutGr, double RigPt);

  [DllImport("litecad.dll", EntryPoint="lcCrossClear", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool CrossClear();

  [DllImport("litecad.dll", EntryPoint="lcCrossBegin", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool CrossBegin(int PlineType);

  [DllImport("litecad.dll", EntryPoint="lcCrossAddPoint", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool CrossAddPoint(double X, double Y);

  [DllImport("litecad.dll", EntryPoint="lcCrossEnd", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool CrossEnd();

  [DllImport("litecad.dll", EntryPoint="lcCrossCalcArea", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int CrossCalcArea();

  [DllImport("litecad.dll", EntryPoint="lcCrossCalcArea2", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int CrossCalcArea2(int hDrw, int GroundKey, int RoadKey, int LinkKey);

  [DllImport("litecad.dll", EntryPoint="lcCrossGetArea", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool CrossGetArea(int iArea, out double pAreaVal, out int pNumPnts);
